--- a/MadridShops-Pro/View/Base.lproj/LaunchScreen.storyboard
+++ b/MadridShops-Pro/View/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,11 +19,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="citytour_madrid" translatesAutoresizingMaskIntoConstraints="NO" id="Y0r-iH-eSE">
-                                <rect key="frame" x="41" y="21.5" width="293" height="216"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="madridShops-Pro" translatesAutoresizingMaskIntoConstraints="NO" id="Y0r-iH-eSE">
+                                <rect key="frame" x="81" y="84" width="213" height="89"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Y0r-iH-eSE" secondAttribute="height" multiplier="213:89" id="zsN-YD-gIQ"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Madrid Shops - PRO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Pa-5Q-06X">
                                 <rect key="frame" x="74.5" y="319" width="226" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="7dG-Bu-sSm"/>
+                                    <constraint firstAttribute="width" constant="226" id="Rdt-wA-rMf"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -30,12 +38,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.88627450980392153" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="9Pa-5Q-06X" firstAttribute="top" secondItem="Y0r-iH-eSE" secondAttribute="bottom" priority="998" constant="81.5" id="9PT-4m-Stj"/>
-                            <constraint firstItem="9Pa-5Q-06X" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HSv-y2-68P"/>
-                            <constraint firstItem="9Pa-5Q-06X" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="J58-xh-h8t"/>
-                            <constraint firstItem="Y0r-iH-eSE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="X91-aK-fLl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9Pa-5Q-06X" secondAttribute="bottom" priority="999" constant="319" id="vlS-Uo-sdL"/>
-                            <constraint firstItem="Y0r-iH-eSE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="1.5" id="x8S-EB-Ae5"/>
+                            <constraint firstItem="Y0r-iH-eSE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="K9R-Is-Vnb"/>
+                            <constraint firstItem="9Pa-5Q-06X" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Kdd-ab-MG1"/>
+                            <constraint firstItem="9Pa-5Q-06X" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="aeM-pk-d0e"/>
+                            <constraint firstItem="Y0r-iH-eSE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="64" id="h6Q-En-zpx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -46,6 +52,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="citytour_madrid" width="293" height="216"/>
+        <image name="madridShops-Pro" width="213" height="89"/>
     </resources>
 </document>
